# Atode-GUI

./: .gitignore  README.ja.md  README.md  index.html  main - コピー.js  main.js  package-lock.json  package.json  safe-diagnosis.bat  tsconfig.json  vite.config.js
.github/workflows/: rust.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: browser.rs  main.rs
src-tauri/src/ddl/: 001_create_sites.sql  002_create_articles.sql  003_create_tags.sql  004_create_article_tags.sql
src-tauri/src/scripts/: windows_get_url.ps1
src-web/: index.html  main.js  styles.css
