[package]
name = "src-tauri"
version = "0.1.0"
description = "後で読む記事管理ツール"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-maximize", "window-close", "window-minimize", "window-hide", "window-unminimize", "window-unmaximize", "window-show", "window-set-focus",
    "global-shortcut-all", 
    "shell-open", 
    "custom-protocol", 
    "system-tray",
    "wry"
], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.29", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.4"
regex = "1.10"
once_cell = "1.19"

[dependencies.windows]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "processthreadsapi"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "src-tauri"
path = "src/main.rs"
